♻️ refactor: update .editorconfig and .gitattributes
- Refactored the .editorconfig file to include additional settings for Mkpmfile.
- Updated the .gitattributes file to include a new entry for cache.tar.gz.

fix: update .gitignore and .vscode/settings.json

- Fixed the .gitignore file to remove unnecessary entries.
- Updated the .vscode/settings.json file to include recommendations for the ms-vscode.makefile-tools extension.

feat: add new files and rename Makefile to Mkpmfile

- Added new files: .mkpm/cache.tar.gz, .vscode/extensions.json, .mkpm/mkpm, and mkpm.json.
- Renamed Makefile to Mkpmfile.

docs: update mkpm.json description and author

- Updated the description and author fields in the mkpm.json file.

chore: clean up mkpm script

- Cleaned up the mkpm script by removing unnecessary code and improving readability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,12 @@
     "Risser",
     "stdenv"
   ],
-  "psi-header.variables": [["projectCreationYear", "2022"]],
+  "psi-header.variables": [
+    [
+      "projectCreationYear",
+      "2022"
+    ]
+  ],
   "psi-header.config": {
     "blankLinesAfter": 1,
     "company": "Risser Labs",
@@ -62,7 +67,9 @@
       "modDate": "Last Modified:",
       "modDateFormat": "dd-MM-yyyy HH:mm:ss",
       "prefix": " *",
-      "replace": ["File:"],
+      "replace": [
+        "File:"
+      ],
       "rootDirFileName": "LICENSE",
       "suffix": ""
     },
@@ -77,7 +84,9 @@
       "modDate": "Last Modified:",
       "modDateFormat": "dd-MM-yyyy HH:mm:ss",
       "prefix": "#",
-      "replace": ["File:"],
+      "replace": [
+        "File:"
+      ],
       "rootDirFileName": "LICENSE",
       "suffix": ""
     }
@@ -85,16 +94,24 @@
   "psi-header.changes-tracking": {
     "autoHeader": "autoSave",
     "enforceHeader": true,
-    "include": ["rust", "makefile"],
+    "include": [
+      "rust",
+      "makefile"
+    ],
     "isActive": true,
     "modAuthor": "Modified By:",
     "modDate": "Last Modified:",
     "modDateFormat": "dd-MM-yyyy hh:nn:ss",
-    "replace": ["Filename:"],
+    "replace": [
+      "Filename:"
+    ],
     "updateLicenseVariables": true
   },
   "psi-header.license-reference": {
     "uri": "../LICENSE",
     "uriIsLocalFile": true
+  },
+  "files.associations": {
+    "Mkpmfile": "makefile"
   }
 }
