--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "bitspur",
     "cloc",
     "gnumake",
     "gnused",
@@ -9,12 +10,7 @@
     "Risser",
     "stdenv"
   ],
-  "psi-header.variables": [
-    [
-      "projectCreationYear",
-      "2022"
-    ]
-  ],
+  "psi-header.variables": [["projectCreationYear", "2022"]],
   "psi-header.config": {
     "blankLinesAfter": 1,
     "company": "Risser Labs",
@@ -67,9 +63,7 @@
       "modDate": "Last Modified:",
       "modDateFormat": "dd-MM-yyyy HH:mm:ss",
       "prefix": " *",
-      "replace": [
-        "File:"
-      ],
+      "replace": ["File:"],
       "rootDirFileName": "LICENSE",
       "suffix": ""
     },
@@ -84,9 +78,7 @@
       "modDate": "Last Modified:",
       "modDateFormat": "dd-MM-yyyy HH:mm:ss",
       "prefix": "#",
-      "replace": [
-        "File:"
-      ],
+      "replace": ["File:"],
       "rootDirFileName": "LICENSE",
       "suffix": ""
     }
@@ -94,17 +86,12 @@
   "psi-header.changes-tracking": {
     "autoHeader": "autoSave",
     "enforceHeader": true,
-    "include": [
-      "rust",
-      "makefile"
-    ],
+    "include": ["rust", "makefile"],
     "isActive": true,
     "modAuthor": "Modified By:",
     "modDate": "Last Modified:",
     "modDateFormat": "dd-MM-yyyy hh:nn:ss",
-    "replace": [
-      "Filename:"
-    ],
+    "replace": ["Filename:"],
     "updateLicenseVariables": true
   },
   "psi-header.license-reference": {
