--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,1 @@
-if which pyenv >/dev/null 2>&1; then
-    pyenv versions | sed 's|^\*| |g' | tr -s ' ' | cut -d' ' -f2 | grep $(cat .python-version) || \
-    pyenv install $(cat .python-version)
-fi
+# use nix
